fix netflix content overflow

--- a/Netflix/css/style.css
+++ b/Netflix/css/style.css
@@ -1,23 +1,23 @@
 body {
   margin: 0;
-  display: grid;
 }
 
 h2 {
-  font-size: 2.2em;
+  font-size: 1.9em;
 }
 
 .container {
   font-family: Arial, Helvetica, sans-serif;
   color: white;
   background-color: #0a0a0a;
+  padding-top: 1.5em;
+  padding-bottom: 1em;
   padding-right: 2%;
   padding-left: 2%;
   height: 100vh;
 }
 
 header {
-  margin-top: 30px;
   font-size: 1.5em;
 }
 
@@ -34,7 +34,7 @@ header {
 }
 
 .navbar .nav-logo {
-  width: 240px;
+  width: 220px;
 }
 
 .navbar .nav-logo img {
@@ -55,13 +55,12 @@ header {
 
 main {
   display: grid;
-  margin-top: 1em;
   gap: 20px;
 }
 
 .category {
   display: grid;
-  grid-template-rows: 75px 1fr;
+  grid-template-rows: 70px 1fr;
   gap: 10px;
 }
 
